# storify

./: .cargoignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bash.sh
.github/services/minio/: action.yml
.github/workflows/: ci.yml  release.yml  test_behavior.yml
docs/: config-providers.md  dev-arch.md  faq.md  usage.md
src/: cli.rs  config.rs  error.rs  main.rs  storage.rs  utils.rs
src/cli/: config.rs  context.rs  entry.rs  mod.rs  prompts.rs  storage.rs
src/config/: crypto.rs  loader.rs  mod.rs  profile_store.rs  provider.rs  spec.rs  storage_config.rs
src/storage/: constants.rs
src/storage/operations/: append.rs  copy.rs  diff.rs  download.rs  find.rs  grep.rs  head.rs  list.rs  mod.rs  mv.rs  stat.rs  tail.rs  touch.rs  tree.rs  truncate.rs  usage.rs
src/storage/utils/: mod.rs  path.rs
src/tests/: mod.rs
src/tests/behavior/: macros.rs  mod.rs  utils.rs
src/tests/behavior/operations/: append.rs  cat.rs  copy.rs  delete.rs  diff.rs  download.rs  find.rs  grep.rs  head.rs  list.rs  mkdir.rs  mod.rs  mv.rs  stat.rs  tail.rs  touch.rs  tree.rs  upload.rs  usage.rs
tests/behavior/: main.rs  utils.rs
tests/behavior/operations/: copy.rs  delete.rs  diff.rs  download.rs  find.rs  grep.rs  head.rs  list.rs  mkdir.rs  mod.rs  mv.rs  stat.rs  tail.rs  touch.rs  tree.rs  truncate.rs  upload.rs  usage.rs
tests/data/: unicode_name.txt
tests/data/download/existing_file.txt/: 8cd5b311-6c08-4d8e-b68d-63d5be3103cb  bb7e8954-8add-446a-914f-7230c2847612
